--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^5.0.2"
+channels = "^4.0.0"
+daphne = "^4.1.0"
 
 
 [build-system]
